fixed display of multiline comment message; trim whitespace from comment message and comment author

--- a/public/style.scss
+++ b/public/style.scss
@@ -42,6 +42,7 @@ button {
 
     .message {
         margin:0;
+        white-space: pre;
     }
 }
 
